// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.team_channel_settings.group_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description"
    >
      <FormattedMessage
        defaultMessage="Members"
        id="admin.team_channel_settings.group_list.membersHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-actions"
    />
  </div>
  <div
    className="groups-list--body"
  >
    <GroupRow
      group={
        Object {
          "display_name": "DN",
          "id": "123",
          "member_count": 3,
        }
      }
      key="123"
      removeGroup={[MockFunction]}
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.team_channel_settings.list.paginatorCount"
        values={
          Object {
            "endCount": 1,
            "startCount": 1,
            "total": 1,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={null}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next disabled"
      disabled={true}
      onClick={null}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot with paging 1`] = `
<div
  className="groups-list"
>
  <div
    className="groups-list--header"
  >
    <div
      className="group-name"
    >
      <FormattedMessage
        defaultMessage="Name"
        id="admin.team_channel_settings.group_list.nameHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-description"
    >
      <FormattedMessage
        defaultMessage="Members"
        id="admin.team_channel_settings.group_list.membersHeader"
        values={Object {}}
      />
    </div>
    <div
      className="group-actions"
    />
  </div>
  <div
    className="groups-list--body"
  >
    <GroupRow
      group={
        Object {
          "display_name": "DN0",
          "id": "id0",
          "member_count": 3,
        }
      }
      key="id0"
      removeGroup={[MockFunction]}
    />
    <GroupRow
      group={
        Object {
          "display_name": "DN1",
          "id": "id1",
          "member_count": 3,
        }
      }
      key="id1"
      removeGroup={[MockFunction]}
    />
    <GroupRow
      group={
        Object {
          "display_name": "DN2",
          "id": "id2",
          "member_count": 3,
        }
      }
      key="id2"
      removeGroup={[MockFunction]}
    />
    <GroupRow
      group={
        Object {
          "display_name": "DN3",
          "id": "id3",
          "member_count": 3,
        }
      }
      key="id3"
      removeGroup={[MockFunction]}
    />
    <GroupRow
      group={
        Object {
          "display_name": "DN4",
          "id": "id4",
          "member_count": 3,
        }
      }
      key="id4"
      removeGroup={[MockFunction]}
    />
    <GroupRow
      group={
        Object {
          "display_name": "DN5",
          "id": "id5",
          "member_count": 3,
        }
      }
      key="id5"
      removeGroup={[MockFunction]}
    />
    <GroupRow
      group={
        Object {
          "display_name": "DN6",
          "id": "id6",
          "member_count": 3,
        }
      }
      key="id6"
      removeGroup={[MockFunction]}
    />
    <GroupRow
      group={
        Object {
          "display_name": "DN7",
          "id": "id7",
          "member_count": 3,
        }
      }
      key="id7"
      removeGroup={[MockFunction]}
    />
    <GroupRow
      group={
        Object {
          "display_name": "DN8",
          "id": "id8",
          "member_count": 3,
        }
      }
      key="id8"
      removeGroup={[MockFunction]}
    />
    <GroupRow
      group={
        Object {
          "display_name": "DN9",
          "id": "id9",
          "member_count": 3,
        }
      }
      key="id9"
      removeGroup={[MockFunction]}
    />
  </div>
  <div
    className="groups-list--footer"
  >
    <div
      className="counter"
    >
      <FormattedMessage
        defaultMessage="{startCount, number} - {endCount, number} of {total, number}"
        id="admin.team_channel_settings.list.paginatorCount"
        values={
          Object {
            "endCount": 10,
            "startCount": 1,
            "total": 30,
          }
        }
      />
    </div>
    <button
      className="btn btn-link prev disabled"
      disabled={true}
      onClick={null}
    >
      <PreviousIcon
        additionalClassName={null}
      />
    </button>
    <button
      className="btn btn-link next "
      disabled={false}
      onClick={[Function]}
    >
      <NextIcon
        additionalClassName={null}
      />
    </button>
  </div>
</div>
`;
